# cc_ai_model_ontology

./: AGENTS.md  Makefile  README.md  SCHEMA.md  pyproject.toml
.github/workflows/: validate-ontology.yml
data/: capabilities.yaml  families.yaml  models.yaml
schema/: ccf_models.yaml
scripts/: validate.py  validate_provenance.py  validate_xrefs.py
