[project]
name = "cc-ai-model-ontology"
version = "0.2.0"
description = "LinkML ontology for AI/ML models, capabilities, and deployment constraints"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "linkml>=1.9",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
